fix margins on mobile

--- a/public/app/css/pages/article.css
+++ b/public/app/css/pages/article.css
@@ -238,7 +238,8 @@
         font-family: var(--serif-font);
         letter-spacing: -0.02em;
         line-height: 1.3em;
-        padding: 0;
+        padding-top: 0;
+        padding-bottom: 0;
 
         & + p {
             margin-top: 0;
